[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/UI.gd" type="Script" id=1]
[ext_resource path="res://scenes/FeeCheckbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/font/SimpleFont.fnt" type="BitmapFont" id=3]
[ext_resource path="res://scenes/Stocks.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/clipboard.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/button_0.png" type="Texture" id=6]
[ext_resource path="res://scenes/EnterButton.gd" type="Script" id=7]

[node name="UI" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 300.0
margin_bottom = 600.0
color = Color( 0.992157, 1, 0.729412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashStocks" parent="ColorRect" instance=ExtResource( 4 )]
position = Vector2( 75, 60 )
scale = Vector2( 2, 2 )

[node name="LoyaltyStocks" parent="ColorRect" instance=ExtResource( 4 )]
position = Vector2( 225, 60 )
scale = Vector2( 2, 2 )
stock_type = 0

[node name="CashLabel" type="Label" parent="ColorRect"]
anchor_left = 0.00333333
anchor_right = 0.00333333
margin_left = 8.0
margin_top = 96.0
margin_right = 75.0
margin_bottom = 108.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "$100.00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoyaltyLabel" type="Label" parent="ColorRect"]
margin_left = 207.0
margin_top = 96.0
margin_right = 249.0
margin_bottom = 108.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.94902, 0, 0, 1 )
text = "50"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeeContainer" type="Node2D" parent="ColorRect"]
position = Vector2( 24, 171 )

[node name="ClipboardSprite" type="Sprite" parent="ColorRect/FeeContainer"]
position = Vector2( 126, 189 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="FeesLabel" type="Label" parent="ColorRect/FeeContainer"]
margin_left = 85.0
margin_top = 9.0
margin_right = 171.0
margin_bottom = 25.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0941176, 0.760784, 0, 1 )
text = "Fees"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeeOptions" type="Node2D" parent="ColorRect/FeeContainer"]
position = Vector2( -12, -36 )

[node name="LateFee" parent="ColorRect/FeeContainer/FeeOptions" instance=ExtResource( 2 )]
position = Vector2( 14, 84 )

[node name="RewindFee" parent="ColorRect/FeeContainer/FeeOptions" instance=ExtResource( 2 )]
position = Vector2( 15, 204 )
fee_type = 1

[node name="RepairFee" parent="ColorRect/FeeContainer/FeeOptions" instance=ExtResource( 2 )]
position = Vector2( 15, 264 )
fee_type = 2

[node name="PurchaseFee" parent="ColorRect/FeeContainer/FeeOptions" instance=ExtResource( 2 )]
position = Vector2( 15, 144 )
fee_type = 4

[node name="RentalFee" parent="ColorRect/FeeContainer/FeeOptions" instance=ExtResource( 2 )]
position = Vector2( 15, 321 )
fee_type = 5

[node name="Total" type="Label" parent="ColorRect/FeeContainer"]
visible = false
margin_left = 2.0
margin_top = 357.0
margin_right = 50.0
margin_bottom = 371.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Total:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalLabel" type="Label" parent="ColorRect/FeeContainer"]
visible = false
margin_left = 98.0
margin_top = 357.0
margin_right = 178.0
margin_bottom = 371.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$0.00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterButton" type="TextureButton" parent="ColorRect/FeeContainer"]
anchor_right = 0.126437
margin_left = 123.0
margin_top = 366.0
margin_right = 193.0
margin_bottom = 392.0
rect_scale = Vector2( 2, 2 )
disabled = true
texture_normal = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/FeeContainer/EnterButton"]
margin_left = 12.0
margin_top = 4.5
margin_right = 52.0
margin_bottom = 18.5
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="ColorRect/FeeContainer/EnterButton" to="." method="_on_EnterButton_button_down"]
